# bot-lab

./: .gitmodules  Dockerfile  Jenkinsfile  k8s-deployment.yaml  readme.md
Dockerfiles/: readme.md
Dockerfiles/runtime/: Dockerfile  start.sh
Dockerfiles/rust-builder-aarch64/: Dockerfile
Dockerfiles/rust-builder-x86_64/: Dockerfile
rasis/: Cargo.toml  Makefile.toml  readme.md
rasis/dockerfiles/: readme.md
rasis/dockerfiles/rasis-builder-arm/: Dockerfile
rasis/src/: main.rs
rasis/src/commands/: about.rs  mod.rs
rasis/src/helper/: container.rs  hooks.rs  mod.rs
rasis/src/hooks/: hooks.rs
scripts/: build-release.sh  docker-build.sh  docker-push.sh  start.sh
