[package]
name = "rasis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.9.0", features = ["full"]}
# futures = "0.3"
# serenity = "0.10.8"
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.10.8"}
        