[package]
name = "rasis"
version = "0.1.0"
edition = "2018"

# [build]
# target="aarch64-unknown-linux-gnu"

# [target.aarch64-unknown-linux-gnu]
# linker = "aarch64-linux-gnu-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = {version = "1.9.0", features = ["full"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# futures = "0.3"
# serenity = "0.10.8"
serenity = { default-features = true, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.10.8"}
